# smart-cert-check

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
smart_cert_check/: __init__.py  core.py
tests/: test_smart_cert_check.py
